Updating for deliverable 1, 2, and 3

--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1065,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1142,7 @@
        "Counter({'low_risk': 51369, 'high_risk': 51369})"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1167,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
        "       [ 5795, 11306]], dtype=int64)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
        "0.5805654640079527"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
        "0.57511847035486"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1330,7 @@
        "       [ 5488, 11613]], dtype=int64)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1392,7 @@
        "Counter({'high_risk': 243, 'low_risk': 243})"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1430,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
        "0.57511847035486"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,17 +1451,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[  60,   44],\n",
-       "       [9092, 8009]], dtype=int64)"
+       "       [9076, 8025]], dtype=int64)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1515,32 +1515,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'high_risk': 51361, 'low_risk': 46611})"
+       "Counter({'high_risk': 68460, 'low_risk': 62011})"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Resample the training data with SMOTEENN\n",
+    "# Warning: This is a large dataset, and this step may take some time to complete\n",
+    "\n",
     "from imblearn.combine import SMOTEENN\n",
     "\n",
     "smote_enn = SMOTEENN(random_state=0)\n",
-    "X_resampled, y_resampled = smote_enn.fit_resample(X_train, y_train)\n",
+    "X_resampled, y_resampled = smote_enn.fit_resample(X, y)\n",
     "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1549,7 +1551,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1562,17 +1564,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   63,    41],\n",
-       "       [ 6993, 10108]], dtype=int64)"
+       "array([[  73,   31],\n",
+       "       [7122, 9979]], dtype=int64)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1585,16 +1587,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5984228880002519"
+       "0.6427281018204063"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1606,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1615,10 +1617,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.61      0.59      0.02      0.60      0.36       104\n",
-      "   low_risk       1.00      0.59      0.61      0.74      0.60      0.36     17101\n",
+      "  high_risk       0.01      0.70      0.58      0.02      0.64      0.41       104\n",
+      "   low_risk       1.00      0.58      0.70      0.74      0.64      0.40     17101\n",
       "\n",
-      "avg / total       0.99      0.59      0.61      0.74      0.60      0.36     17205\n",
+      "avg / total       0.99      0.58      0.70      0.73      0.64      0.40     17205\n",
       "\n"
      ]
     }
